# JA_aht

./: .gitignore  plan.md
codex/: AGENT.md
jax-aht/: .gitignore  LICENSE  README.md  download_eval_data.py  pyproject.toml  requirements.txt  run_overcooked_v1_comedi_ppo_br.sh  run_overcooked_v1_po_pipeline.sh
jax-aht/agents/: agent_interface.py  initialize_agents.py  ja_actor_critic.py  ja_actor_critic_agent.py  ja_utils.py  liam_agent.py  meliba_agent.py  mlp_actor_critic.py  mlp_actor_critic_agent.py  population_buffer.py  population_interface.py  rnn_actor_critic.py  rnn_actor_critic_agent.py  s5_actor_critic.py  s5_actor_critic_agent.py
jax-aht/agents/lbf/: __init__.py  agent_policy_wrappers.py  base_agent.py  random_agent.py  (+1 more)
jax-aht/common/: agent_loader_from_config.py  plot_utils.py  run_episodes.py  save_load_utils.py  stat_utils.py  tree_utils.py  wandb_visualizations.py
jax-aht/docs/: index.html  install_instructions.md
jax-aht/ego_agent_training/: liam_ego.py  liam_utils.py  meliba_ego.py  meliba_utils.py  ppo_br.py  ppo_ego.py  run.py  utils.py
jax-aht/envs/: __init__.py  base_env.py  environment_spec.md  log_wrapper.py
jax-aht/evaluation/: generate_xp_matrix.py  heldout_eval.py  heldout_evaluator.py  render_and_log.py  run.py  vis_episodes.py
jax-aht/human_data/: .gitignore  README.md  app.py  config.py  test_app.py
jax-aht/marl/: ippo.py  ppo_utils.py  run.py  run_and_visualize.sh
jax-aht/open_ended_training/: experiments.sh  open_ended_minimax.py  paired.py  ppo_ego_with_buffer.py  rotate.py  run.py
jax-aht/teammate_generation/: BRDiv.py  CoMeDi.py  LBRDiv.py  experiments.sh  fcp.py  run.py  train_ego.py
jax-aht/tests/: test_hanabi.py  test_lbf_agents.py  test_lbf_reward_shaping_wrapper.py  test_lbf_wrapper.py  test_overcooked_agents.py  test_overcooked_wrapper.py
jax-aht/tutorials/: JaxAHT_Tutorial.ipynb
(+107 files in other folders)
